--- a/styel.css
+++ b/styel.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
 }
 
+
 #loading {
   position: fixed;
   z-index: 9999;
@@ -234,6 +235,7 @@ body {
   border-bottom: solid #000000 2px;
   padding: 0.5em 0 0.5em 1em;
   font-size: 20px;
+  margin: 0 20px
 }
 
 .indexMenu ol li {
@@ -249,7 +251,7 @@ body {
   text-decoration: none;
   padding: 0.5em 0.8em;
   margin-top: 10px;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .indexMenu ol li a:hover {
@@ -259,14 +261,14 @@ body {
   border-radius: 0.25em;
   padding: 0.5em 0.8em;
   transition: all 0.3s;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .indexMenu ol li p{
   margin: 0;
   padding: 0;
   padding-top: 5px;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .indexMenu ul {
@@ -275,6 +277,7 @@ body {
   border-bottom: solid #000000 2px;
   padding: 0.5em 0 0.5em 1em;
   font-size: 20px;
+  margin: 0 20px
 }
 
 .indexMenu ul li {
@@ -410,7 +413,6 @@ body {
 }
 
 
-
 .title h1 {
   animation-delay: 3s;
   animation: scroll 3.5s;
@@ -467,6 +469,7 @@ body {
   height: 250px;
   background-image: conic-gradient(#d5525f 0% 80%, #d9d9d9 80% 100%);
   border-radius: 50%;
+  margin-bottom: 10px;
 }
 .pie01 span {
   position: absolute;
@@ -474,8 +477,8 @@ body {
   right: 20%;
   transform: translateY(-70%);
   color: #fff;
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .pie02 {
@@ -488,6 +491,7 @@ body {
   height: 250px;
   background-image: conic-gradient(#ce3a49 0% 83%, #d9d9d9 83% 100%);
   border-radius: 50%;
+  margin-bottom: 10px;
 }
 .pie02 span {
   position: absolute;
@@ -495,8 +499,8 @@ body {
   right: 15%;
   transform: translateY(-70%);
   color: #fff;
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .pie03 {
@@ -509,6 +513,7 @@ body {
   height: 250px;
   background-image: conic-gradient(#5269cf 0% 73%, #d9d9d9 73% 100%);
   border-radius: 50%;
+  margin-bottom: 10px;
 }
 .pie03 span {
   position: absolute;
@@ -516,8 +521,8 @@ body {
   right: 15%;
   transform: translateY(-70%);
   color: #fff;
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 
@@ -531,6 +536,7 @@ body {
   height: 250px;
   background-image: conic-gradient(#3a55ce 0% 62%, #d9d9d9 62% 100%);
   border-radius: 50%;
+  margin-bottom: 10px;
 }
 .pie04 span {
   position: absolute;
@@ -538,8 +544,8 @@ body {
   right: 7%;
   transform: translateY(-70%);
   color: #fff;
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 
